# tts-vc

./: .env.sample  README.md  app.py  gradio_fe_app.py  pyproject.toml  requirements.txt  test_vc_mac.py
src/: __init__.py  vc.py
src/models/s3gen/: s3gen.py
src/services/: tts_core.py
