[project]
name = "tts-vc"
version = "0.0.1"
description = "TTS and Voice Cloning with Chirp 3 and Cosyvoice"
readme = "README.md"
requires-python = ">=3.12.11"
license = {file = "LICENSE"}
authors = [
    {name = "tts-vc", email = "mghifary@gmail.com"}
]
dependencies = [
    "google-cloud-texttospeech",
    "s3tokenizer",
    "conformer",
]

[project.urls]
Homepage = "https://github.com/ghif/tts-vc"
Repository = "https://github.com/ghif/tts-vc"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
